第一个记录

--- a/blog/source/_posts/第一个记录.md
+++ b/blog/source/_posts/第一个记录.md
@@ -3,3 +3,10 @@ title: 第一个记录
 date: 2018-05-13 16:46:55
 tags:
 ---
+
+# 我的日记
+我的github
+https://github.com/lazyTai/
+
+我的sandbox
+https://codesandbox.io/u/lazyTai/sandboxes
